<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_margin="15dp"
    >

    <TableLayout android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:context=".AddPhoneActivity"

        android:shrinkColumns="*"
        android:stretchColumns="2">
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        >

        <TextView
            android:text="@string/brand"
            android:textSize="20dp"
            android:fontFamily="@font/montserrat"
            />

        <EditText
            android:id="@+id/et_brand"
            android:layout_marginStart="5dp"
            android:layout_span="2"
            android:layout_width="wrap_content"
            android:textSize="20dp"
            android:fontFamily="@font/montserrat"
            android:singleLine="true"
            />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        >

        <TextView
            android:text="@string/model"
            android:textSize="20dp"
            android:fontFamily="@font/montserrat"
            />

        <EditText
            android:id="@+id/et_model"
            android:layout_marginStart="5dp"
            android:layout_span="2"
            android:layout_width="wrap_content"
            android:textSize="20dp"
            android:fontFamily="@font/montserrat"
            android:singleLine="true"
            />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginVertical="5dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/android_version"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/et_android_version"
            android:layout_marginStart="5dp"
            android:layout_span="2"
            android:layout_width="wrap_content"
            android:inputType="numberDecimal"
            android:maxLength="4"
            android:textSize="20dp"
            android:fontFamily="@font/montserrat"
            android:singleLine="true"/>
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        >

        <TextView
            android:text="@string/website"
            android:textSize="20dp"
            android:fontFamily="@font/montserrat"
            />

        <EditText
            android:id="@+id/et_website"
            android:layout_marginStart="5dp"
            android:layout_span="2"
            android:layout_width="wrap_content"
            android:textSize="20dp"
            android:fontFamily="@font/montserrat"
            android:singleLine="true"/>
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        >

        <Button
            android:id="@+id/btn_website"
            android:text="@string/website"
            />

        <Button
            android:id="@+id/btn_cancel"
            android:text="@string/cancel"
            android:layout_marginHorizontal="10dp"
            />

        <Button
            android:id="@+id/btn_save"
            android:text="@string/save"
            />

    </TableRow>
    </TableLayout>
</ScrollView>